--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -72,3 +72,63 @@
   color: white;
   margin: -7px -10px;
 }
+
+.cartOpen {
+  position: absolute;
+  padding: 20px;
+  width: 95%;
+  height: 250px;
+  background-color: rgb(255, 255, 255);
+  z-index: 1002;
+  border-radius: 10px;
+  top: 78px;
+  left: 2.6%;
+}
+.spanCart {
+  font-weight: 600;
+  margin-bottom: 100px;
+}
+.cartOpen hr {
+  margin: 26px -20px;
+}
+.thumbnailImage {
+  border-radius: 4px;
+  width: 50px;
+}
+.spanEmpty {
+  color: gray;
+  font-weight: 600;
+}
+.empty {
+  display: flex;
+  height: 170px;
+  justify-content: center;
+  align-items: center;
+}
+.cartFlex {
+  display: flex;
+  align-items: center;
+  gap: 17px;
+}
+.spanGray {
+  color: gray;
+}
+.spanStrong {
+  font-weight: 600;
+  color: black;
+}
+.divDelete {
+  position: absolute;
+  left: 89.2%;
+  top: 45%;
+}
+.btnCheckout {
+  position: absolute;
+  background-color: rgb(255, 115, 0);
+  width: 88%;
+  height: 50px;
+  border-radius: 10px;
+  text-align: center;
+  padding-top: 13.3px;
+  top: 68%;
+}
