--- a/src/components/main components/cartt/cart.module.css
+++ b/src/components/main components/cartt/cart.module.css
@@ -34,3 +34,12 @@
 .btnPointer {
   cursor: pointer;
 }
+.cartMain {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 1024px) {
+  .cartMain {
+    flex-direction: row;
+  }
+}
