--- a/src/components/main components/cartt/cart.module.css
+++ b/src/components/main components/cartt/cart.module.css
@@ -18,7 +18,7 @@
 }
 .addToCartContainer {
   margin: 15px;
-  padding: 20px;
+  padding: 18px;
   background-color: rgb(255, 144, 18);
   border-radius: 10px;
 }
@@ -41,5 +41,26 @@
 @media (min-width: 1024px) {
   .cartMain {
     flex-direction: row;
+  }
+  .cartContainer {
+    padding: 0;
+
+    min-width: 180px;
+  }
+  .cartBtns {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    padding: 0 10px;
+  }
+  .addToCartContainer {
+    padding: 0;
+  }
+
+  .btnAddToCart {
+    width: 250px;
+    height: 60px;
+    cursor: pointer;
   }
 }
