--- a/src/components/main components/main.module.css
+++ b/src/components/main components/main.module.css
@@ -7,14 +7,25 @@
   .main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 4rem;
-    padding: 3rem 5rem;
+    gap: 1rem;
+    padding-top: 3rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    width: 100%;
   }
 
   .details {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
+    height: 100%;
     gap: 2rem;
+  }
+}
+@media (min-width: 1800px) {
+  .main {
+    padding-left: 400px;
+    padding-right: 400px;
   }
 }
