--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -143,7 +143,30 @@
 .finalHr {
   display: none;
 }
-@media (min-width: 1024px) {
+@media (min-width: 426px) {
+  .cartContainer {
+    position: absolute;
+    right: 25%;
+  }
+  .avatarImage {
+    position: absolute;
+    right: 10%;
+  }
+  .logo {
+    position: absolute;
+    left: 20%;
+  }
+}
+@media (min-width: 768px) {
+  .logo {
+    position: unset;
+    left: 20%;
+  }
+  .cartOpen {
+    width: 300px;
+    left: 70%;
+    box-shadow: 0px 8px 20px -5px;
+  }
   .iconMenu {
     display: none;
   }
@@ -154,8 +177,95 @@
     color: gray;
     gap: 37px;
   }
-  .menuDesktop li {
+  .menuDesktop a {
     cursor: pointer;
+    text-decoration: none;
+    color: gray;
+  }
+  .menuDesktop a:hover {
+    color: black;
+  }
+  .logo {
+    padding-right: 60px;
+    padding-top: 2.5px;
+  }
+  .cartContainer {
+    position: absolute;
+    left: 830px;
+    top: 27px;
+  }
+  .avatarImage {
+    position: absolute;
+    left: 900px;
+  }
+  .imageLogin:hover {
+    border: 2px solid orange;
+    border-radius: 50%;
+  }
+  .cartImage {
+    width: 18px;
+  }
+  .imageLogin {
+    width: 37px;
+  }
+  .finalHr {
+    display: flex;
+    margin: 12px 20px;
+    width: 1000px;
+    border: 1px solid rgb(226, 226, 226);
+  }
+  .menuDesktop li {
+    position: relative;
+    padding-bottom: 40px;
+  }
+  .menuDesktop li::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: orange;
+
+    transform: scaleX(0);
+    transition: transform 0.3s ease-out;
+  }
+  .menuDesktop li:hover::after {
+    transform: scaleX(1);
+  }
+
+  .menuDesktop li a {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+  }
+  .menuDesktop {
+    padding-top: 35px;
+  }
+}
+@media (min-width: 1024px) {
+  .cartOpen {
+    width: 300px;
+    left: 70%;
+    box-shadow: 0px 8px 20px -5px;
+  }
+  .iconMenu {
+    display: none;
+  }
+  .menuDesktop {
+    display: flex;
+    list-style-type: none;
+    font-weight: 500;
+    color: gray;
+    gap: 37px;
+  }
+  .menuDesktop a {
+    cursor: pointer;
+    text-decoration: none;
+    color: gray;
+  }
+  .menuDesktop a:hover {
+    color: black;
   }
   .logo {
     padding-right: 60px;
@@ -170,6 +280,10 @@
     position: absolute;
     left: 90%;
   }
+  .imageLogin:hover {
+    border: 2px solid orange;
+    border-radius: 50%;
+  }
   .cartImage {
     width: 18px;
   }
@@ -178,11 +292,40 @@
   }
   .finalHr {
     display: flex;
-    margin: 20px 20px;
+    margin: 12px 20px;
     width: 98%;
     border: 1px solid rgb(226, 226, 226);
   }
+  .menuDesktop li {
+    position: relative;
+    padding-bottom: 40px;
+  }
+  .menuDesktop li::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: orange;
+
+    transform: scaleX(0);
+    transition: transform 0.3s ease-out;
+  }
+  .menuDesktop li:hover::after {
+    transform: scaleX(1);
+  }
+
+  .menuDesktop li a {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+  }
+  .menuDesktop {
+    padding-top: 35px;
+  }
 }
+
 @media (min-width: 1800px) {
   .cartContainer {
     left: 75%;
