--- a/src/components/main components/main.module.css
+++ b/src/components/main components/main.module.css
@@ -3,6 +3,26 @@
   flex-direction: column;
   gap: 2rem;
 }
+@media (min-width: 768px) {
+  .main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    padding-top: 3rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    width: 100%;
+  }
+
+  .details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100%;
+    gap: 2rem;
+  }
+}
 @media (min-width: 1024px) {
   .main {
     display: grid;
